[tool.poetry]
name = "ccfatigue-preprocessing"
version = "0.1.0"
description = ""
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "to be defined"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
simplejson = "^3.17.6"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
