[tool.poetry]
name = "ccfatigue"
version = "0.1.0"
description = ""
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "to be defined"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.2"
pydantic = "^1.8.2"
gunicorn = "^20.1.0"
dynaconf = "^3.1.7"
psycopg2 = "^2.9.2"
asyncpg = "^0.26.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.27"}
alembic = "^1.7.5"
fastapi-pagination = {extras = ["async_sqlalchemy"], version = "^0.10.0"}
bokeh = "^2.4.2"
pandas = "^1.4.4"
numpy = "^1.22.0"
python-multipart = "^0.0.5"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
pre-commit = "^2.16.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
